--- a/svc/hecate/src/common/components/echo/echo.module.scss
+++ b/svc/hecate/src/common/components/echo/echo.module.scss
@@ -6,17 +6,16 @@
 
   .hudWindow {
     position: fixed;
-    top: 10%;
-    left: 50%;
-    transform: translateX(-50%);
+    top: 2.5%;
+    left: 1.5%;
     width: 80%;
-    height: 60vh;
+    height: 100vh;
     max-height: 85vh;
     background-color: rgba($accent-color, 0.1);
     border: 2px solid $accent-color;
     border-radius: 10px;
     color: $text-color;
-    padding: 20px;
+    padding: 50px;
     overflow-y: auto;
     box-shadow: 0 0 30px $black-glow;
     font-family: $batman-font;
@@ -55,35 +54,36 @@
     }
   }
 
-  .controlWindow {
+  .verticalNavbar {
     position: fixed;
-    bottom: 10px;
-    right: 10px;
-    width: 300px;
-    height: auto;
-    background-color: rgba($background-dark, 0.9);
-    border: 2px solid $accent-color;
-    border-radius: 10px;
-    box-shadow: 0 0 30px $black-glow;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 5px;
+    top: 10%;
+    width: 150px;
+    right: 2.5%;
+    display: flex;
+    flex-direction: column;
 
-    .controlButton {
+    .navButton {
       width: 100%;
       height: 50px;
-      color: $accent-color;
-      background: transparent;
-      border: 2px solid $accent-color;
-      border-radius: 5px;
+      color: $text-color;
+      background: rgba($accent-color, 0.1);
+      border: none;
+      border-bottom: 2px solid rgba($accent-color, 0.3);
       font-size: 16px;
+      text-align: center;
+      padding-left: 10px;
       cursor: pointer;
       transition: all 0.3s ease;
+      margin-bottom: 10px;
 
       &:hover {
-        background-color: $accent-color;
-        color: $text-color;
+        background: $accent-color;
+        color: $background-dark;
+      }
+
+      &:last-child {
+        border-bottom: none;
+        margin-bottom: 0;
       }
     }
   }
