--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -52,7 +52,7 @@ html, body {
     content: '';
     position: absolute;
     left: 0;
-    right: 0;
+    right: -50%;
     bottom: 0;
     height: 100px; /* Adjust this value for glow spread */
     background: radial-gradient(ellipse at center, $black-glow 0%, transparent 70%);
@@ -106,7 +106,7 @@ h1, h2, h3, h4, h5, h6 {
 .fire {
   position: fixed;
   bottom: 10px;
-  left: 50%;
+  right: 15%;
   transform: translateX(-50%);
   width: 128px;
   height: 240px;
